[package]
name = "mnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

mnet_lib = { path = "./mnet_lib" }
mnet_macro = { path = "./mnet_macro" }
rand = "0.8.5"
nokhwa = { version = "0.9.4", features = ["input-v4l"] }
image = "0.24.2"
show-image = "0.12.3"
