[package]
name = "mnet"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "plotmuxui"
path = "src/plotmuxui.rs"

[[bin]]
name = "sin"
path = "src/sin.rs"

[dependencies]

mnet_lib = { path = "./mnet_lib" }
mnet_macro = { path = "./mnet_macro" }
plotmux = { path = "./plotmux" }

rand = "0.8.5"
nokhwa = { version = "0.9.4", features = ["input-v4l"] }
image = "0.24.2"
show-image = "0.12.3"
