[package]
name = "ntpnets"
version = "0.1.0"
edition = "2021"

[dependencies]

ntpnet_lib = { path = "../ntpnet_lib" }
ntpnet_macro = { path = "../ntpnet_macro" }
plotmux = { path = "../plotmux" }

rscam = "0.5.5"
image = "0.24.2"
clap = { version = "4.0.7", features = ["derive"] }
fft2d = "0.1.0"
rustfft = "6.0.1"
tensorflow = "0.19.1"

libpulse-simple-binding = "2.25.0"
libpulse-sys = "1.19.3"
libpulse-binding = "2.26.0"

byteorder = "1.4.3"
