[package]
name = "plotmux"
version = "0.1.0"
edition = "2021"

path = "src/*"

[dependencies]
crossbeam-channel = "0.5.5"
sha1 = "0.10.0"
eframe = "0.19.0"
egui_extras = { version = "0.19.0", features = ["image"] }

serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
bincode = "1.2.1"
image = { version = "0.24", features = ["jpeg", "png"] }
