[package]
name = "plotmux"
version = "0.1.0"
edition = "2021"

[features]
default = ["plotmuxui"]
plotmuxui = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "plotmuxui"
path = "src/bin/plotmuxui.rs"
required-features = ["plotmuxui"]

[dependencies]
crossbeam-channel = "0.5.5"
defer = "0.1.0"
sha1 = "0.10.0"
eframe = "0.21.3"
egui_extras = { version = "0.21.0", features = ["image"] }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
bincode = "1.2.1"
image = { version = "0.24", features = ["jpeg", "png"] }
clap = "4.0.18"
snap = "1.0.5"
